fixing individual pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
   <body>
     <header>
-      <div class="logo"><img src="assets/logo.png" alt="jda home" /></div>
+      <div class="logo">
+        <a href="#" alt="home"><img src="assets/logo.png" alt="jda home" /></a>
+      </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
       </button>
@@ -57,32 +59,38 @@
         <div class="service">
           <h3>Web Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nulla
-            similique adipisci, ea atque voluptates harum ipsam dolore
-            aspernatur, quaerat ex id! Quibusdam dolores adipisci dignissimos
-            vitae voluptatibus odit sit.
+            I'm a graduate from Grand Circus' Front End Bootcamp, so I'm partial
+            to UI/UX and general front end work, but my passion for learning
+            helps me to exceed wherever I find myself. Skills include -
+            Javascript, React, Angular, TypeScript, Node.js, Express, HTML/CSS,
+            SASS.
           </p>
+          <a href="#work" class="btn">Dev Work</a>
         </div>
         <div class="service">
           <h3>Photography</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-            ut omnis, recusandae aliquam veritatis sunt iste! Vel nulla placeat
-            modi voluptates culpa nemo quia magnam consequatur! Dicta
-            consequuntur voluptatibus expedita!
+            I like to take pictures. Most people have liked the pictures I've
+            taken. People that have liked them: professors at Michigan State,
+            clients, my family. If you'd like to see the kind of pictures I take
+            check out my work on my photography portfolio.
           </p>
+          <a href="https://jdandrews.myportfolio.com/" class="btn"
+            >Photography Portfolio</a
+          >
         </div>
         <div class="service">
           <h3>Writing</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure,
-            magnam vitae mollitia a quam ex vero voluptatum quis nesciunt hic
-            explicabo recusandae quibusdam aut repellat quas molestias
-            distinctio officia blanditiis.
+            My first creative love, and the other half of my focus while at
+            Michigan State. I really enjoy understanding what my audience wants
+            to hear and catering perfectly to them. My past work has ranged from
+            fortune-500 company wide emails to social media campaigns for small
+            businesses
           </p>
+          <a href="writing-samples.html" class="btn">Writing Samples</a>
         </div>
       </div>
-      <a href="#work" class="btn">My Work</a>
     </section>
 
     <!-- About Me -->
@@ -90,17 +98,22 @@
     <section class="about-me" id="about">
       <h2 class="section__title section__title-about">Missino Statement</h2>
       <p class="section__subtitle section__subtitle--about">
-        all around creative in Detroit
+        I specialize in Content Creation.
       </p>
       <div class="about-me__body">
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-          eligendi magnam, temporibus eos enim illum cum doloribus perspiciatis
-          fuga numquam, et blanditiis natus, quasi voluptatem saepe? Eius
-          laudantium enim a.s
+          Things happen at the speed of technology, and right now that's pocket
+          super computers. That's pretty fast. So we need interactions that can
+          keep up with that speed. Enter a flexible creator that can handle
+          whatever project you might throw at them.
         </p>
+        <p>*cough* that's me. *cough*</p>
         <p>
-          ti it trnioeq gnfidao; ngdfa nugf;agnu sf gnruew ;ner bguer j;b ger
+          Throughout my creative career I've picked up a lot of skills. The big
+          ones are web development, photography, and copywriting. Add to that
+          years of social-media management, art direction, and creative
+          networking - so if I can't do it (or do it fast enough) I know someone
+          who can. Let me help you create quality, impressionable content.
         </p>
       </div>
       <img src="assets/meSuit.jpg" alt="it me 21" class="about-me__img" />
@@ -112,16 +125,13 @@
       <h2 class="section__title">My work</h2>
       <p class="section__subtitle">Check out what I've been workin' on.</p>
       <div class="portfolio">
-        <a href="portfolio-item.html" class="portfolio__item">
+        <a href="tam.html" class="portfolio__item">
           <img src="assets/tam.jpg" alt="" class="portfolio__img" />
         </a>
-        <a href="portfolio-item.html" class="portfolio__item">
+        <a href="pvs.html" class="portfolio__item">
           <img src="assets/tam.jpg" alt="" class="portfolio__img" />
         </a>
-        <a href="portfolio-item.html" class="portfolio__item">
-          <img src="assets/tam.jpg" alt="" class="portfolio__img" />
-        </a>
-        <a href="portfolio-item.html" class="portfolio__item">
+        <a href="nit.html" class="portfolio__item">
           <img src="assets/tam.jpg" alt="" class="portfolio__img" />
         </a>
       </div>
