--- a/nit.html
+++ b/nit.html
@@ -21,7 +21,9 @@
 
   <body>
     <header>
-      <div class="logo"><img src="assets/logo.png" alt="jda home" /></div>
+      <div class="logo">
+        <a href="#" alt="home"><img src="assets/logo.png" alt="jda home" /></a>
+      </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
       </button>
