fixed styling and pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JDA Dev Portfolio</title>
+    <head>
+      <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png" />
+    </head>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -47,7 +50,9 @@
       <h1 class="section__title section__title--intro">
         Hi, I'm <strong> JD Andrews</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+      <p class="section__subtitle section__subtitle--intro">
+        developer | photographer | writer
+      </p>
       <img src="assets/test.jpg" alt="it me" class="intro__img" />
     </section>
 
@@ -96,9 +101,9 @@
     <!-- About Me -->
 
     <section class="about-me" id="about">
-      <h2 class="section__title section__title-about">Missino Statement</h2>
+      <h2 class="section__title section__title-about">A little background</h2>
       <p class="section__subtitle section__subtitle--about">
-        I specialize in Content Creation.
+        I like making things that people like.
       </p>
       <div class="about-me__body">
         <p>
@@ -129,10 +134,10 @@
           <img src="assets/tam.jpg" alt="" class="portfolio__img" />
         </a>
         <a href="pvs.html" class="portfolio__item">
-          <img src="assets/tam.jpg" alt="" class="portfolio__img" />
+          <img src="assets/pvslogo.jpg" alt="" class="portfolio__img" />
         </a>
         <a href="nit.html" class="portfolio__item">
-          <img src="assets/tam.jpg" alt="" class="portfolio__img" />
+          <img src="assets/newintownlogo.jpg" alt="" class="portfolio__img" />
         </a>
       </div>
     </section>
@@ -145,13 +150,28 @@
       >
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-github"></i></a>
+          <a
+            class="social-list__link"
+            href="https://github.com/jd-andrews"
+            alt="github.com/jd-andrews"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-instagram"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.instagram.com/jda.photos/?hl=en"
+            alt="@jda.photos"
+            ><i class="fab fa-instagram"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-linkedin"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.linkedin.com/in/jdandrews11/"
+            alt="linkedin.com/in/jdandrews11/"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </li>
       </ul>
     </footer>
