--- a/pvs.html
+++ b/pvs.html
@@ -22,7 +22,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="#" alt="home"><img src="assets/logo.png" alt="jda home" /></a>
+        <a href="index.html" alt="home"
+          ><img src="assets/logo.png" alt="jda home"
+        /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -49,29 +51,53 @@
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        thatsa <strong> Mortgage</strong>
+        Peeple vs Sheeple
       </h1>
-      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-      <img src="assets/test.jpg" alt="it me" class="intro__img" />
+      <p class="section__subtitle section__subtitle--intro">
+        angular | heroku | web development
+      </p>
+      <img src="assets/pvslogo.jpg" alt="it me" class="intro__img" />
     </section>
 
     <div class="portfolio-item-individual">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus
-        sapiente modi sed iste dolor, at nemo architecto quibusdam earum?
-        Quisquam nemo commodi iure aperiam eius fuga maxime soluta esse.
+        Peeple Vs. Sheeple is a 'would-you-rather' style game where players
+        choose one of two options to see if they answer in the miniority
+        (people) or the majority (sheeple). It's a simple game that my team and
+        I built with UI in mind, but with some extra bells and whistles like a
+        high-score page and the ability to add your own questions.
       </p>
-      <img src="assets/tam.jpg" alt="" />
+
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus
-        sapiente modi sed iste dolor, at nemo architecto quibusdam earum?
-        Quisquam nemo commodi iure aperiam eius fuga maxime soluta esse.
+        PvS was built using Angular framework and with Heroku database
+        management to hold all the questions and scores. PvS also uses a few web
+        API to populate a random avatar and quote to add levity (it as a game
+        after all).
       </p>
+      <img
+        src="assets/pvsss.png"
+        alt="peeple vs sheeple screenshot"
+        title="peeple vs sheeple screenshot"
+      />
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus
-        sapiente modi sed iste dolor, at nemo architecto quibusdam earum?
-        Quisquam nemo commodi iure aperiam eius fuga maxime soluta esse.
+        If you'd like to check out the live site or see the code on github then
+        follow one of the links below.
       </p>
+      <div>
+        <a
+          class="btn"
+          href="https://peeple-vs-sheeple.surge.sh/home"
+          alt="https://peeple-vs-sheeple.surge.sh/home"
+        >
+          live site</a
+        >
+        <a
+          class="btn"
+          href="https://github.com/jd-andrews/GCFinalAngular"
+          alt="https://github.com/jd-andrews/GCFinalAngular"
+          >code on github</a
+        >
+      </div>
     </div>
 
     <!-- Footer -->
@@ -82,13 +108,28 @@
       >
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-github"></i></a>
+          <a
+            class="social-list__link"
+            href="https://github.com/jd-andrews"
+            alt="github.com/jd-andrews"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-instagram"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.instagram.com/jda.photos/?hl=en"
+            alt="@jda.photos"
+            ><i class="fab fa-instagram"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-linkedin"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.linkedin.com/in/jdandrews11/"
+            alt="linkedin.com/in/jdandrews11/"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </li>
       </ul>
     </footer>
