--- a/tam.html
+++ b/tam.html
@@ -22,7 +22,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="#" alt="home"><img src="assets/logo.png" alt="jda home" /></a>
+        <a href="index.html" alt="home"
+          ><img src="assets/logo.png" alt="jda home"
+        /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -49,29 +51,52 @@
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        thatsa <strong> Mortgage</strong>
+        <strong>Thatsa Mortgage</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-      <img src="assets/test.jpg" alt="it me" class="intro__img" />
+      <p class="section__subtitle section__subtitle--intro">
+        neumorphism | angular | SASS | UI/UX
+      </p>
+      <img src="assets/tam.jpg" alt="it me" class="intro__img" />
     </section>
 
     <div class="portfolio-item-individual">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus
-        sapiente modi sed iste dolor, at nemo architecto quibusdam earum?
-        Quisquam nemo commodi iure aperiam eius fuga maxime soluta esse.
+        Thatsa Mortgage (stylized as thatsa Mortgage) is a simple mortgage
+        calculator built to practice my skills as well as incorporate new design
+        ideas. It's built using the Angular framework, SASS, and Neumorphism UI
+        styling.
       </p>
-      <img src="assets/tam.jpg" alt="" />
+
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus
-        sapiente modi sed iste dolor, at nemo architecto quibusdam earum?
-        Quisquam nemo commodi iure aperiam eius fuga maxime soluta esse.
+        This project let me fully explore my ideas from start to finish in a way
+        I hadn't done before - totally alone. Being able to breakdown every
+        component of the development process, from wireframe to final build,
+        helped me to understand steps and set backs of a project in a new light.
       </p>
+      <img
+        src="assets/tamss.png"
+        alt="thatsa Mortgage screenshot"
+        title="thatsa mortgage screenshot"
+      />
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus
-        sapiente modi sed iste dolor, at nemo architecto quibusdam earum?
-        Quisquam nemo commodi iure aperiam eius fuga maxime soluta esse.
+        If you'd like to check out the live site or see the code on github then
+        follow one of the links below.
       </p>
+      <div>
+        <a
+          class="btn"
+          href="http://mcsample.surge.sh/"
+          alt="http://mcsample.surge.sh/"
+        >
+          live site</a
+        >
+        <a
+          class="btn"
+          href="https://github.com/jd-andrews/Mortgage-Calculator"
+          alt="https://github.com/jd-andrews/Mortgage-Calculator"
+          >code on github</a
+        >
+      </div>
     </div>
 
     <!-- Footer -->
@@ -82,13 +107,28 @@
       >
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-github"></i></a>
+          <a
+            class="social-list__link"
+            href="https://github.com/jd-andrews"
+            alt="github.com/jd-andrews"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-instagram"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.instagram.com/jda.photos/?hl=en"
+            alt="@jda.photos"
+            ><i class="fab fa-instagram"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-linkedin"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.linkedin.com/in/jdandrews11/"
+            alt="linkedin.com/in/jdandrews11/"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </li>
       </ul>
     </footer>
