--- a/writing-samples.html
+++ b/writing-samples.html
@@ -51,9 +51,9 @@
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        writing <strong> samples</strong>
+        <strong>writing samples</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">
+      <p class="section__subtitle section__subtitle--intro portfolio-intro">
         jd andrews
       </p>
       <img src="assets/test.jpg" alt="it me" class="intro__img" />
@@ -67,16 +67,24 @@
         internal social media channels. The following is an email blast for a
         proposed rebrand.
       </p>
-      <p><a href="" alt="iHub Sample">iHub Sample</a></p>
+      <div>
+        <a class="btn" href="assets/iHubJDA.docx" alt="iHub">iHub Sample </a>
+      </div>
     </div>
+    <div class="portfolio-line"></div>
     <div class="portfolio-item-individual">
       <h3>R.J. Conlin Marketing & Design</h3>
       <p>
         I've taken on a number of freelance projects for R.J. Conlin, including
         this flyer for Triton Stormwater Solutions.
       </p>
-      <p><a>Triton Sample</a></p>
+      <div>
+        <a class="btn" href="assets/TritonJDA.pdf" alt="Triton"
+          >Triton Sample</a
+        >
+      </div>
     </div>
+    <div class="portfolio-line"></div>
     <div class="portfolio-item-individual">
       <h3>Shinola Detroit</h3>
       <p>
@@ -85,15 +93,24 @@
         description and Email Blast all while keeping the voice of the company
         in mind.
       </p>
-      <p><a>Shinola Sample</a></p>
+      <div>
+        <a class="btn" href="assets/ShinolaJDA.pdf" alt="Shinola"
+          >Shinola Sample</a
+        >
+      </div>
     </div>
+    <div class="portfolio-line"></div>
     <div class="portfolio-item-individual">
       <h3>City Fitness Philadelphia</h3>
       <p>
         Here's a mockup of a Logan Square Member Signup Email for City Fitness,
         a gym chain in Philadelphia.
       </p>
-      <p><a>City Fitness Sample</a></p>
+      <div>
+        <a class="btn" href="assets/CityFitnessJDA.pdf" alt="City Fitness"
+          >City Fitness Sample</a
+        >
+      </div>
     </div>
 
     <!-- Footer -->
@@ -104,13 +121,28 @@
       >
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-github"></i></a>
+          <a
+            class="social-list__link"
+            href="https://github.com/jd-andrews"
+            alt="github.com/jd-andrews"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-instagram"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.instagram.com/jda.photos/?hl=en"
+            alt="@jda.photos"
+            ><i class="fab fa-instagram"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-linkedin"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.linkedin.com/in/jdandrews11/"
+            alt="linkedin.com/in/jdandrews11/"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </li>
       </ul>
     </footer>
