--- a/nit.html
+++ b/nit.html
@@ -22,7 +22,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="#" alt="home"><img src="assets/logo.png" alt="jda home" /></a>
+        <a href="index.html" alt="home"
+          ><img src="assets/logo.png" alt="jda home"
+        /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -49,29 +51,45 @@
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        thatsa <strong> Mortgage</strong>
+        <strong> New in Town</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-      <img src="assets/test.jpg" alt="it me" class="intro__img" />
+      <p class="section__subtitle section__subtitle--intro">
+        Angular | TicketMaster API
+      </p>
+      <img src="assets/newintownlogo.jpg" alt="it me" class="intro__img" />
     </section>
 
     <div class="portfolio-item-individual">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus
-        sapiente modi sed iste dolor, at nemo architecto quibusdam earum?
-        Quisquam nemo commodi iure aperiam eius fuga maxime soluta esse.
+        New in Town is an event-searching app made using the TicketMaster API
+        and angular framework. It was built with the intention to pair down the
+        information that TicketMaster requires and presents when finding a
+        function.
       </p>
-      <img src="assets/tam.jpg" alt="" />
+      <img
+        src="assets/nitss.png"
+        alt="New in Town screenshot"
+        title="New in Town screenshot"
+      />
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus
-        sapiente modi sed iste dolor, at nemo architecto quibusdam earum?
-        Quisquam nemo commodi iure aperiam eius fuga maxime soluta esse.
+        If you'd like to check out the live site or see the code on github then
+        follow one of the links below.
       </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus
-        sapiente modi sed iste dolor, at nemo architecto quibusdam earum?
-        Quisquam nemo commodi iure aperiam eius fuga maxime soluta esse.
-      </p>
+      <div>
+        <a
+          class="btn"
+          href="https://newintown.surge.sh/splash"
+          alt="https://newintown.surge.sh/splash"
+        >
+          live site</a
+        >
+        <a
+          class="btn"
+          href="https://github.com/jd-andrews/TicketMasterClone"
+          alt="https://github.com/jd-andrews/TicketMasterClone"
+          >code on github</a
+        >
+      </div>
     </div>
 
     <!-- Footer -->
@@ -82,13 +100,28 @@
       >
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-github"></i></a>
+          <a
+            class="social-list__link"
+            href="https://github.com/jd-andrews"
+            alt="github.com/jd-andrews"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-instagram"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.instagram.com/jda.photos/?hl=en"
+            alt="@jda.photos"
+            ><i class="fab fa-instagram"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link"><i class="fab fa-linkedin"></i></a>
+          <a
+            class="social-list__link"
+            href="https://www.linkedin.com/in/jdandrews11/"
+            alt="linkedin.com/in/jdandrews11/"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </li>
       </ul>
     </footer>
