messing around with asset placement

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JDA Dev Portfolio</title>
     <head>
-      <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png" />
+      <link rel="shortcut icon" type="image/x-icon" href="logo.png" />
     </head>
     <link
       rel="stylesheet"
@@ -25,7 +25,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="#" alt="home"><img src="assets/logo.png" alt="jda home" /></a>
+        <a href="#" alt="home"><img src="logo.png" alt="jda home" /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -53,7 +53,7 @@
       <p class="section__subtitle section__subtitle--intro">
         developer | photographer | writer
       </p>
-      <img src="assets/test.jpg" alt="it me" class="intro__img" />
+      <img src="test.jpg" alt="it me" class="intro__img" />
     </section>
 
     <!-- Services -->
@@ -121,7 +121,7 @@
           who can. Let me help you create quality, impressionable content.
         </p>
       </div>
-      <img src="assets/meSuit.jpg" alt="it me 21" class="about-me__img" />
+      <img src="meSuit.jpg" alt="it me 21" class="about-me__img" />
     </section>
 
     <!-- My work  -->
@@ -131,13 +131,13 @@
       <p class="section__subtitle">Check out what I've been workin' on.</p>
       <div class="portfolio">
         <a href="tam.html" class="portfolio__item">
-          <img src="assets/tam.jpg" alt="" class="portfolio__img" />
+          <img src="tam.jpg" alt="" class="portfolio__img" />
         </a>
         <a href="pvs.html" class="portfolio__item">
-          <img src="assets/pvslogo.jpg" alt="" class="portfolio__img" />
+          <img src="pvslogo.jpg" alt="" class="portfolio__img" />
         </a>
         <a href="nit.html" class="portfolio__item">
-          <img src="assets/newintownlogo.jpg" alt="" class="portfolio__img" />
+          <img src="newintownlogo.jpg" alt="" class="portfolio__img" />
         </a>
       </div>
     </section>
