--- a/nit.html
+++ b/nit.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="assets/logo.png" alt="jda home"
+          ><img src="logo.png" alt="jda home"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -56,7 +56,7 @@
       <p class="section__subtitle section__subtitle--intro">
         Angular | TicketMaster API
       </p>
-      <img src="assets/newintownlogo.jpg" alt="it me" class="intro__img" />
+      <img src="newintownlogo.jpg" alt="it me" class="intro__img" />
     </section>
 
     <div class="portfolio-item-individual">
@@ -67,7 +67,7 @@
         function.
       </p>
       <img
-        src="assets/nitss.png"
+        src="nitss.png"
         alt="New in Town screenshot"
         title="New in Town screenshot"
       />
