--- a/writing-samples.html
+++ b/writing-samples.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="assets/logo.png" alt="jda home"
+          ><img src="logo.png" alt="jda home"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -56,7 +56,7 @@
       <p class="section__subtitle section__subtitle--intro portfolio-intro">
         jd andrews
       </p>
-      <img src="assets/test.jpg" alt="it me" class="intro__img" />
+      <img src="test.jpg" alt="it me" class="intro__img" />
     </section>
 
     <div class="portfolio-item-individual">
@@ -68,7 +68,7 @@
         proposed rebrand.
       </p>
       <div>
-        <a class="btn" href="assets/iHubJDA.docx" alt="iHub">iHub Sample </a>
+        <a class="btn" href="iHubJDA.docx" alt="iHub">iHub Sample </a>
       </div>
     </div>
     <div class="portfolio-line"></div>
@@ -79,9 +79,7 @@
         this flyer for Triton Stormwater Solutions.
       </p>
       <div>
-        <a class="btn" href="assets/TritonJDA.pdf" alt="Triton"
-          >Triton Sample</a
-        >
+        <a class="btn" href="TritonJDA.pdf" alt="Triton">Triton Sample</a>
       </div>
     </div>
     <div class="portfolio-line"></div>
@@ -94,9 +92,7 @@
         in mind.
       </p>
       <div>
-        <a class="btn" href="assets/ShinolaJDA.pdf" alt="Shinola"
-          >Shinola Sample</a
-        >
+        <a class="btn" href="ShinolaJDA.pdf" alt="Shinola">Shinola Sample</a>
       </div>
     </div>
     <div class="portfolio-line"></div>
@@ -107,7 +103,7 @@
         a gym chain in Philadelphia.
       </p>
       <div>
-        <a class="btn" href="assets/CityFitnessJDA.pdf" alt="City Fitness"
+        <a class="btn" href="CityFitnessJDA.pdf" alt="City Fitness"
           >City Fitness Sample</a
         >
       </div>
