--- a/pvs.html
+++ b/pvs.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="assets/logo.png" alt="jda home"
+          ><img src="logo.png" alt="jda home"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -56,7 +56,7 @@
       <p class="section__subtitle section__subtitle--intro">
         angular | heroku | web development
       </p>
-      <img src="assets/pvslogo.jpg" alt="it me" class="intro__img" />
+      <img src="pvslogo.jpg" alt="it me" class="intro__img" />
     </section>
 
     <div class="portfolio-item-individual">
@@ -75,7 +75,7 @@
         after all).
       </p>
       <img
-        src="assets/pvsss.png"
+        src="pvsss.png"
         alt="peeple vs sheeple screenshot"
         title="peeple vs sheeple screenshot"
       />
