--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="#" alt="home"><img src="logo.png" alt="jda home" /></a>
+        <a href="#" alt="home"
+          ><img src="logo.png" alt="jda home" loading="lazy"
+        /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -53,7 +55,7 @@
       <p class="section__subtitle section__subtitle--intro">
         developer | photographer | writer
       </p>
-      <img src="test.jpg" alt="it me" class="intro__img" />
+      <img src="test.jpg" alt="it me" class="intro__img" loading="lazy" />
     </section>
 
     <!-- Services -->
@@ -121,7 +123,12 @@
           who can. Let me help you create quality, impressionable content.
         </p>
       </div>
-      <img src="meSuit.jpg" alt="it me 21" class="about-me__img" />
+      <img
+        src="meSuit.jpg"
+        alt="it me 21"
+        class="about-me__img"
+        loading="lazy"
+      />
     </section>
 
     <!-- My work  -->
@@ -131,13 +138,18 @@
       <p class="section__subtitle">Check out what I've been workin' on.</p>
       <div class="portfolio">
         <a href="tam.html" class="portfolio__item">
-          <img src="tam.jpg" alt="" class="portfolio__img" />
+          <img src="tam.jpg" alt="" class="portfolio__img" loading="lazy" />
         </a>
         <a href="pvs.html" class="portfolio__item">
-          <img src="pvslogo.jpg" alt="" class="portfolio__img" />
+          <img src="pvslogo.jpg" alt="" class="portfolio__img" loading="lazy" />
         </a>
         <a href="nit.html" class="portfolio__item">
-          <img src="newintownlogo.jpg" alt="" class="portfolio__img" />
+          <img
+            src="newintownlogo.jpg"
+            alt=""
+            class="portfolio__img"
+            loading="lazy"
+          />
         </a>
       </div>
     </section>
