--- a/nit.html
+++ b/nit.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="logo.png" alt="jda home"
+          ><img src="logo.png" alt="jda home" loading="lazy"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -56,7 +56,12 @@
       <p class="section__subtitle section__subtitle--intro">
         Angular | TicketMaster API
       </p>
-      <img src="newintownlogo.jpg" alt="it me" class="intro__img" />
+      <img
+        src="newintownlogo.jpg"
+        alt="it me"
+        class="intro__img"
+        loading="lazy"
+      />
     </section>
 
     <div class="portfolio-item-individual">
@@ -70,6 +75,7 @@
         src="nitss.png"
         alt="New in Town screenshot"
         title="New in Town screenshot"
+        loading="lazy"
       />
       <p>
         If you'd like to check out the live site or see the code on github then
@@ -121,6 +127,14 @@
             href="https://www.linkedin.com/in/jdandrews11/"
             alt="linkedin.com/in/jdandrews11/"
             ><i class="fab fa-linkedin"></i
+          ></a>
+        </li>
+        <li class="social-list__item">
+          <a
+            class="social-list__link"
+            href="https://dribbble.com/jda-exe"
+            alt="dribbble.com/jda-exe"
+            ><i class="fab fa-dribbble"></i
           ></a>
         </li>
       </ul>
