--- a/pvs.html
+++ b/pvs.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="logo.png" alt="jda home"
+          ><img src="logo.png" alt="jda home" loading="lazy"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -56,7 +56,7 @@
       <p class="section__subtitle section__subtitle--intro">
         angular | heroku | web development
       </p>
-      <img src="pvslogo.jpg" alt="it me" class="intro__img" />
+      <img src="pvslogo.jpg" alt="it me" class="intro__img" loading="lazy" />
     </section>
 
     <div class="portfolio-item-individual">
@@ -78,6 +78,7 @@
         src="pvsss.png"
         alt="peeple vs sheeple screenshot"
         title="peeple vs sheeple screenshot"
+        loading="lazy"
       />
       <p>
         If you'd like to check out the live site or see the code on github then
@@ -129,6 +130,14 @@
             href="https://www.linkedin.com/in/jdandrews11/"
             alt="linkedin.com/in/jdandrews11/"
             ><i class="fab fa-linkedin"></i
+          ></a>
+        </li>
+        <li class="social-list__item">
+          <a
+            class="social-list__link"
+            href="https://dribbble.com/jda-exe"
+            alt="dribbble.com/jda-exe"
+            ><i class="fab fa-dribbble"></i
           ></a>
         </li>
       </ul>
