--- a/writing-samples.html
+++ b/writing-samples.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="logo.png" alt="jda home"
+          ><img src="logo.png" loading="lazy" alt="jda home" loading="lazy"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -56,7 +56,7 @@
       <p class="section__subtitle section__subtitle--intro portfolio-intro">
         jd andrews
       </p>
-      <img src="test.jpg" alt="it me" class="intro__img" />
+      <img src="test.jpg" alt="it me" class="intro__img" loading="lazy" />
     </section>
 
     <div class="portfolio-item-individual">
@@ -138,6 +138,14 @@
             href="https://www.linkedin.com/in/jdandrews11/"
             alt="linkedin.com/in/jdandrews11/"
             ><i class="fab fa-linkedin"></i
+          ></a>
+        </li>
+        <li class="social-list__item">
+          <a
+            class="social-list__link"
+            href="https://dribbble.com/jda-exe"
+            alt="dribbble.com/jda-exe"
+            ><i class="fab fa-dribbble"></i
           ></a>
         </li>
       </ul>
