fixed some writing and grammatical errors.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JDA Dev Portfolio</title>
+    <title>JD Andrews</title>
     <head>
       <link rel="shortcut icon" type="image/x-icon" href="logo.png" />
     </head>
@@ -66,11 +66,10 @@
         <div class="service">
           <h3>Web Development</h3>
           <p>
-            I'm a graduate from Grand Circus' Front End Bootcamp, so I'm partial
-            to UI/UX and general front end work, but my passion for learning
-            helps me to exceed wherever I find myself. Skills include -
-            Javascript, React, Angular, TypeScript, Node.js, Express, HTML/CSS,
-            SASS.
+            My strongsuit is front end, specifically UI/UX, but my love of
+            learning helps me thrive in whatever position I find myself. Skills
+            include - Javascript, React, Angular, TypeScript, Node.js, Express,
+            HTML/CSS, SASS.
           </p>
           <a href="#work" class="btn">Dev Work</a>
         </div>
@@ -78,9 +77,9 @@
           <h3>Photography</h3>
           <p>
             I like to take pictures. Most people have liked the pictures I've
-            taken. People that have liked them: professors at Michigan State,
-            clients, my family. If you'd like to see the kind of pictures I take
-            check out my work on my photography portfolio.
+            taken. Some of the eople that have liked them: professors at
+            Michigan State, clients, my family, etc. If you'd like to see some
+            of my photos check out my photography portfolio.
           </p>
           <a href="https://jdandrews.myportfolio.com/" class="btn"
             >Photography Portfolio</a
@@ -89,11 +88,10 @@
         <div class="service">
           <h3>Writing</h3>
           <p>
-            My first creative love, and the other half of my focus while at
-            Michigan State. I really enjoy understanding what my audience wants
-            to hear and catering perfectly to them. My past work has ranged from
-            fortune-500 company wide emails to social media campaigns for small
-            businesses
+            My first creative endeavor. When I'm writing I enjoy tweaking my
+            personal style and making it what my audience wants to hear. My past
+            work has ranged from company-wide email blasts to social media
+            campaigns for small businesses.
           </p>
           <a href="writing-samples.html" class="btn">Writing Samples</a>
         </div>
