fixed broken surge for TAM

--- a/tam.html
+++ b/tam.html
@@ -84,10 +84,17 @@
         follow one of the links below.
       </p>
       <div>
-        <a
+        <!-- <a
           class="btn"
           href="http://mcsample.surge.sh/"
           alt="http://mcsample.surge.sh/"
+        >
+          live site</a
+        > -->
+        <a
+          class="btn"
+          href="http://scrawny-cemetery.surge.sh/"
+          alt="http://scrawny-cemetery.surge.sh/"
         >
           live site</a
         >
