added HTH page and module

--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
             loading="lazy"
           />
         </a>
+        <a href="hth.html" class="portfolio__item">
+          <img src="hthlogo.jpg" alt="" class="portfolio__img" loading="lazy" />
+        </a>
       </div>
     </section>
 
