spelling error fix

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <h3>Photography</h3>
           <p>
             I like to take pictures. Most people have liked the pictures I've
-            taken. Some of the eople that have liked them: professors at
+            taken. Some of the people that have liked them: professors at
             Michigan State, clients, my family, etc. If you'd like to see some
             of my photos check out my photography portfolio.
           </p>
