added resume, contact button and cf page

--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
           networking - so if I can't do it (or do it fast enough) I know someone
           who can. Let me help you create quality, impressionable content.
         </p>
+        <div class="about-me_btn">
+          <a href="JDAndrews.pdf" alt="JD Andrews Resume" class="btn">Resume</a>
+          <a
+            href="mailto:jdandrewdev@gmail.com"
+            alt="jdandrewsdev@gmail.com"
+            class="btn"
+            >Contact Me</a
+          >
+        </div>
       </div>
       <img
         src="meSuit.jpg"
